--- a/templates/front/index.html
+++ b/templates/front/index.html
@@ -31,7 +31,7 @@
             </div>
           </div>
         </div>
-        <div class="p-4 lg:w-1/3">
+        {% comment %} <div class="p-4 lg:w-1/3">
           <div class="h-full bg-gray-100 bg-opacity-75 px-8 pt-16 pb-24 rounded-lg overflow-hidden text-center relative">
             <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2>
             <h1 class="title-font sm:text-2xl text-xl font-medium text-gray-900 mb-3">Ennui Snackwave Thundercats</h1>
@@ -56,8 +56,8 @@
               </span>
             </div>
           </div>
-        </div>
-        <div class="p-4 lg:w-1/3">
+        </div> {% endcomment %}
+        {% comment %} <div class="p-4 lg:w-1/3">
           <div class="h-full bg-gray-100 bg-opacity-75 px-8 pt-16 pb-24 rounded-lg overflow-hidden text-center relative">
             <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2>
             <h1 class="title-font sm:text-2xl text-xl font-medium text-gray-900 mb-3">Selvage Poke Waistcoat Godard</h1>
@@ -82,7 +82,7 @@
               </span>
             </div>
           </div>
-        </div>
+        </div> {% endcomment %}
       </div>
     </div>
   </section>
