--- a/templates/accounts/account.html
+++ b/templates/accounts/account.html
@@ -1,27 +1,29 @@
 {% extends 'base.html' %}
 
 {% block main %}
-  <div class="container my-5">
-    <div class="row">
-      <div class="col-12">
-        <h1>Account</h1>
+    <div class="container mx-auto">
+      <div class="container mx-auto mt-4 w-3/5 flex flex-col justify-center">
+        <div class="flex justify-center">
+          <h1>Account</h1>
+        </div>
         <form method="POST">
           {% csrf_token %}
           <div class="form-row">
-            <div class="form-group col-md-4">
-              <label>Username</label>
-              <input class="form-control" type="text" name="username" placeholder="name" value="{{ user.username }}" />
+            <div class="mt-4 mb-2">
+              <label for="username">Username</label>
+              <input class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" type="text" name="username" placeholder="name" value="{{ user.username }}" />
             </div>
           </div>
-          <div class="form-row">
-            <div class="form-group col-md-4">
-              <label>Email</label>
-              <input class="form-control" type="email" name="email" placeholder="Email" value="{{ user.email }}" required />
+          <div class="w-full">
+            <div class="mt-4 mb-2">
+              <label for="email">Email</label>
+              <input class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" type="email" name="email" placeholder="Email" value="{{ user.email }}" required />
             </div>
           </div>
-          <button type="submit" class="btn btn-primary">Save</button>
+          <div class="flex flex-row-reverse">
+            <button type="submit" class="mt-4 text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Save</button>
+          </div>
         </form>
       </div>
     </div>
-  </div>
 {% endblock %}
